# bitbucket.rs

./: .travis.yml  Cargo.toml  index.html  search-index.js  settings.html  source-files.js
bitbucket/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.API.html  struct.PageIterator.html  struct.Paginated.html
bitbucket/api/: struct.API.html
bitbucket/error/: enum.Error.html
bitbucket/model/: enum.ForkPolicy.html  enum.ObjectType.html  enum.Role.html  enum.Scm.html  index.html  sidebar-items.js  struct.Branch.html  struct.Link.html  struct.Owner.html  struct.Project.html  struct.Repository.html  struct.RepositoryLinks.html  struct.ShortLinks.html
bitbucket/pagination/: struct.PageIterator.html  struct.Paginated.html
bitbucket/repository/: enum.ForkPolicy.html  enum.ObjectType.html  enum.Role.html  enum.Scm.html  struct.Branch.html  struct.Link.html  struct.Owner.html  struct.Project.html  struct.Repository.html  struct.RepositoryLinks.html  struct.ShortLinks.html
bitbucket/requests/: index.html  sidebar-items.js  struct.RepositoriesRequest.html  struct.RepositoryCreationRequest.html  struct.RepositoryRequest.html
bitbucket/requests/repositories/: struct.RepositoriesRequest.html
bitbucket/requests/repository/: struct.RepositoryCreationRequest.html  (+1 more)
src/: api.rs  error.rs  internal_api.rs  lib.rs  pagination.rs  repository.rs
src/bitbucket/: api.rs.html  error.rs.html  internal_api.rs.html  lib.rs.html  pagination.rs.html  repository.rs.html
src/request_params/: mod.rs
src/requests/: mod.rs  repositories.rs  repository.rs
(+20 files in other folders)
